--- a/app.json
+++ b/app.json
@@ -3,7 +3,6 @@
     "description": "A barebones Node.js app using Express 4",
     "repository": "https://github.com/xywer/server-page",
     "logo": "http://node-js-sample.herokuapp.com/node.svg",
-    "keywords": ["node", "express", "static", "mysql", "cors",
-        "socket.io"]
+    "keywords": ["node", "express", "static"]
 
 }
