--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/xywer/server-page",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
-  "image": "heroku/nodejs"
+    "name": "Start on Heroku: Node.js",
+    "description": "A barebones Node.js app using Express 4",
+    "repository": "https://github.com/xywer/server-page",
+    "logo": "http://node-js-sample.herokuapp.com/node.svg",
+    "keywords": ["node", "express", "static", "socket-io", "cors", "mysql"],
+    "image": "heroku/nodejs"
 }
