--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "Maldy Server",
-  "version": "0.2.5",
-  "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "5.9.1"
-  },
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "ejs": "2.4.1",
-    "express": "4.13.3",
-    "socket-io": "*",
-    "mysql": "*",
-    "cors": "*"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/xywer/server-page"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express",
-    "cors",
-    "mysql"
-  ],
-  "license": "MIT"
+    "name": "Maldy Server",
+    "version": "0.2.5",
+    "description": "A sample Node.js app using Express 4",
+    "engines": {
+        "node": "5.9.1"
+    },
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "johnny-five": "latest",
+        "serialport": "1.4.10",
+        "ejs": "2.4.1",
+        "express": "4.13.3",
+        "socket-io": "*",
+        "mysql": "*",
+        "cors": "*"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/xywer/server-page"
+    },
+    "keywords": [
+        "node",
+        "heroku",
+        "express"
+    ],
+    "license": "MIT"
 }
