--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
         "start": "node index.js"
     },
     "dependencies": {
+        "mysql": "*",
+        "cors": "*",
+        "socket-io": "*",
+        "express": "4.13.3",
+        "ejs": "2.4.1",
+        "johnny-five": "latest",
+        "serialport": "1.4.10"
 
     },
     "repository": {
