--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Start on Heroku: Node.js",
-    "description": "A barebones Node.js app using Express 4",
+    "description": "Express",
     "repository": "https://github.com/xywer/server-page",
     "logo": "http://node-js-sample.herokuapp.com/node.svg",
     "keywords": ["node", "express", "static", "socket-io", "cors", "mysql"],
