--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "mysql": "*",
         "socket-io": "*",
+        "cors": "*",
         "ejs": "2.4.1",
         "express": "4.13.3"
     },
